Focus UI + Fix Markdown

--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
 
             <img src="img/iX.png" id="iX">
             <div id="previewBox">
+                <div id="previewElementFocuser"></div>
     
                 <div id="bannerWrapper" class="editableImage" onClick="editImage('bannerImage')">
                     <div id="bannerImage"></div>
