--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                                 To get started it's super easy, just go ahead and click the plus icon inside the preview on the right to add a section.
                                 You can add section tabs to the depiction using the "Edit Tabs" button at the top.
                             </p>
+                            <p>
+                                Created with <span style="color:#E53838;">&#10084;</span> by <a href="https://twitter.com/TPinpal" style="color:rgb(90,129,186)">PINPAL</a>
+                            </p>
                         </div>
 
                         <!-- Edit Tint Color -->
