Fix Nav Buttons + Alert Padding

--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
                 <img src="img/blazerepo.png" id="logo">
                 <div id="sidebarButtons">
                     <div class="sidebarButton" onClick="editTabs()" style="background-image: url('img/edit.svg')">Edit Tabs</div>
-                    <div class="seperator"></div>
                     <div class="sidebarButton" onClick="editTintColor()" style="background-image: url('img/editColor.svg')">Tint Color</div>
-                    <div class="seperator"></div>
                     <div class="sidebarButton" onClick="toggleEditUI(this)" style="background-image: url('img/previewMode.svg')">Preview Mode</div>
-                    <div class="seperator"></div>
                     <div class="sidebarButton" id="darkModeButton" onClick="toggleDarkMode(this)" style="background-image: url('img/darkMode.svg')">Dark Mode</div>
-                    <!-- <div class="seperator"></div>
-                    <div class="sidebarButton" onClick="downloadConfig()" style="background-image: url('img/download.svg')">Download Depiction</div> -->
+                    <div class="sidebarButton" onClick="downloadConfig()" style="background-image: url('img/download.svg')">Download Depiction</div>
                 </div>
                 <h1 id="alertHeader">Welcome</h1>
                 <h2 id="alertSubheader">Sileo Depiction Generator</h1>
