Basic EditView + Uncompile JS

--- a/index.html
+++ b/index.html
@@ -582,5 +582,21 @@
     <script src="https://cdn.jsdelivr.net/npm/showdown"></script>
     <script src="https://pinpal.github.io/Sileo-Depiction-WebViews/global.js"></script>
     <script src="https://pinpal.github.io/Sileo-Depiction-WebViews/viewHandler.js"></script>
-    <script src='js/main.min.js'></script>
+
+    <!-- Old Scripts-->
+    <script src='pre-js/color-picker.js'></script>
+    <script src='pre-js/initialiseColorPickers.js'></script>
+    <script src="pre-js/depictionPreview.js"></script>
+    <script src="pre-js/buttonHandlers.js"></script>
+    <script src="pre-js/alerts.js"></script>
+    <script src="pre-js/addViewUI.js"></script>
+    <script src="pre-js/editBannerUI.js"></script>
+    <script src="pre-js/editTabsUI.js"></script>
+    <script src="pre-js/main.js"></script>
+
+    <!-- 
+    New Script (Replace Once Complete)
+    <script src='js/main.min.js'></script> 
+    -->
+
 </html>
