Remove Blaze Branding

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="everythingWrapper">
 
             <div id="sidebar">
-                <img src="img/blazerepo.png" id="logo">
+                <img src="img/pinpal.png" id="logo">
                 <div id="sidebarButtons">
                     <div class="sidebarButton" onClick="editTabs()" style="background-image: url('img/edit.svg')">Edit Tabs</div>
                     <div class="sidebarButton" onClick="editTintColor()" style="background-image: url('img/editColor.svg')">Tint Color</div>
@@ -46,6 +46,7 @@
                                     To get started it's super easy, just go ahead and click the plus icon inside the preview on the right to add a section.
                                     You can add section tabs to the depiction using the "Edit Tabs" button at the top.
                                 </p>
+                                <p><i><b>Please note:</b> This is beta software and is not yet finalised</i></p>
                                 <p>
                                     Created with <span style="color:#E53838;">&#10084;</span> by <a href="https://twitter.com/TPinpal" style="color:rgb(90,129,186)">PINPAL</a>
                                 </p>
